--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     </Section>
 
     <section class="content about">
-        <h2 class="title">About</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit tempora, voluptatibus maiores inventore reiciendis voluptatum saepe debitis dolores ad odio fuga corrupti est nemo. Iure suscipit quae porro vero ab!</p>
+        <h2 class="title">Acerca</h2>
+        <p>aqui encontraras mas info de el local</p>
 
         <a href="#">Saber Mas</a>
     </section>
@@ -105,7 +105,7 @@
 
     </section>
 
-    <section class="content contact">
+    <section class=" content contact">
         <h2 class="title">Contacto</h2>
         <p>5555</p>
         <figure class="map">
